--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,42 +2,30 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   deploy:
-    runs-on: self-hosted  # ใช้ Self-hosted Runner ที่ติดตั้งอยู่ใน VPN
+    runs-on: self-hosted # ใช้ Self-hosted Runner ที่ติดตั้งอยู่ใน VPN
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4  # ใช้ action เพื่อ checkout โค้ดจาก GitHub
+        uses: actions/checkout@v4 # ใช้ action เพื่อ checkout โค้ดจาก GitHub
 
-      - name: Install SoftEther VPN Client (if needed)
+      # ใช้สคริปต์ VPN ที่มีอยู่ (ไม่ต้อง sudo)
+      - name: Connect to VPN
         run: |
-          sudo apt update
-          sudo apt install -y softether-vpnclient
+          cd ~
+          ./vpn-connect.sh
+          sleep 5 # รอให้ VPN เชื่อมต่อ
 
-      - name: Connect to VPN using vpncmd (SoftEther VPN)
+      # ดึงโค้ดและ deploy
+      - name: Pull and deploy
         run: |
-          # ถ้าใช้ SoftEther VPN Client ให้ตั้งค่าการเชื่อมต่อที่ได้จาก IT หรือไฟล์ที่คุณได้รับ
-          vpncmd <<EOF
-          ServerConnect student-vpn.buu.ac.th  # ใช้เซิร์ฟเวอร์ที่เชื่อมต่อ
-          AccountCreate "MyVPN" /SERVER:student-vpn.buu.ac.th /HUB:VPN /USERNAME:"${{ secrets.VPN_USERNAME }}" /PASSWORD:"${{ secrets.VPN_PASSWORD }}"
-          AccountConnect "MyVPN"
-          EOF
-          sleep 10  # รอให้ VPN เชื่อมต่อเสร็จ
+          cd ~/Backend-Bluelock-007
+          git pull origin main # เปลี่ยน branch ตามต้องการ
 
-      - name: Deploy via SSH
-        uses: webfactory/ssh-agent@v0.6.0
-        with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-
-      - name: Pull latest code and deploy
-        run: |
-          ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "
-            cd ~/Backend-Bluelock-007 &&
-            git pull origin master &&
-            docker-compose down &&
-            docker-compose up -d --build
-          "
+          # ใช้ full path ของ docker-compose
+          ~/bin/docker-compose down
+          ~/bin/docker-compose up -d --build
