--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,16 +14,16 @@ jobs:
         uses: actions/checkout@v4 # ใช้ action เพื่อ checkout โค้ดจาก GitHub
 
       # ใช้สคริปต์ VPN ที่มีอยู่ (ไม่ต้อง sudo)
-      - name: Connect to VPN
-        env:
-          VPN_USERNAME: ${{ secrets.VPN_USER }}
-          VPN_PASSWORD: ${{ secrets.VPN_PASSWORD }}
-          VPN_BUU: ${{ secrets.VPN_BUU }} # ตรวจสอบชื่อตัวแปรให้ตรงกับในสคริปต์
-        run: |
-          cd ~
-          chmod +x ./vpn-connect.sh  # เพิ่มบรรทัดนี้
-          ./vpn-connect.sh
-          sleep 5 # รอให้ VPN เชื่อมต่อ
+      # - name: Connect to VPN
+      #   env:
+      #     VPN_USERNAME: ${{ secrets.VPN_USER }}
+      #     VPN_PASSWORD: ${{ secrets.VPN_PASSWORD }}
+      #     VPN_BUU: ${{ secrets.VPN_BUU }} # ตรวจสอบชื่อตัวแปรให้ตรงกับในสคริปต์
+      #   run: |
+      #     cd ~
+      #     chmod +x ./vpn-connect.sh  # เพิ่มบรรทัดนี้
+      #     ./vpn-connect.sh
+      #     sleep 5 # รอให้ VPN เชื่อมต่อ
 
       # ดึงโค้ดและ deploy
       - name: Pull and deploy
