--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,5 +24,5 @@ jobs:
       - name: Build and Start new containers
         run: |
           cd ~/AI-Voice-Chat
-          # docker compose up -d --build
+          docker compose up -d --build
         # --remove-orphans # --remove-orphans เพื่อลบ container ที่ไม่ได้อยู่ใน compose file ออกไป
